--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,7 @@
 <%=render 'search' %>
 
-<%=@companies.each do |company| %>
- <%=company.name %>
- <%=company.code %>
+<% @topics=Topic.all %>
+
+<% @topics.each do |topic| %>
+ <li><%=link_to topic.title,topic %></li>
 <% end %>
