--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,23 +1,12 @@
 <div class="row">
   <div class="col-sm-9">
-    <form name="form1" id="id_form1" action="">
-      <label>企業名</label>
-      <input name="textBox1" id="id_textBox1" type="text" value="" />
-
-      <label>〜日後</label>
-      <input name="textBox1" id="id_textBox1" type="text" value="" />
-
-      <label>精度</label>
-      <input name="textBox1" id="id_textBox1" type="text" value="" />
-
-      <input type="button" value="株価解析" onclick="onButtonClick()" />
-    </form>
-    <%=render text:`rake temporary:python` %>
+    <%=render :template=>"selected_companies/new" %>
     <%= high_chart("sample", @graph) %>
   </div>
-  
+
   <div class="col-sm-3">
     <h1>スレッド一覧</h1>
+    <a href="skyway/index.html">個人チャット</a>
     <%=render 'topics/search' %>
     <% @topics.each do |topic| %>
      <li><%=link_to topic.title,topic %></li>
