--- a/app/views/selected_companies/new.html.erb
+++ b/app/views/selected_companies/new.html.erb
@@ -1,4 +1,4 @@
-  <%=form_for @selected_company do |f| %>
+  <%=form_for(@selected_company) do |f| %>
     <%=f.label :name,'企業名' %>
     <%=f.text_field :name %>
 
