--- a/app/views/selected_companies/new.html.erb
+++ b/app/views/selected_companies/new.html.erb
@@ -8,5 +8,5 @@
     <%=f.label :runs,'精度' %>
     <%=f.select :runs,[10,100,1000] %>
 
-    <%=f.submit '解析' %>
+    <%=f.submit '解析',class:"btn" %>
   <% end %>
