--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
+ .div1{
+   border-style: solid;
+   border-color:rgb(192,192,192);
+   width:80%;
+   margin:0 auto;
+ }
+
+ .class1{
+   position:relative;
+   margin: 0 0 1.5em;
+   padding:0.8em;
+   font-size:1.5em;
+   font-weight:bold;
+   color:#fff;
+   background-color: #2aa5b9;
+
+ }
