--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,11 +1,15 @@
-<%=@topic.title %>
-<% @topic.posts.each do |post| %>
- <li>
-   日付:<%=post.created_at %>
-   本文:<%=post.content %>
-   名前:<%=post.name %>
- </li>
-<% end %>
+<div class="boxB">
+  <div class="title5">
+    <%=@topic.title %>
+  </div>
+  <% @topic.posts.each do |post| %>
+  <li class="coment5">
+    日付:<%=post.created_at %>
+    本文:<%=post.content %>
+    名前:<%=post.name %>
+  </li>
+  <% end %>
+</br>
 
 <%=form_for([@topic,@topic.posts.build]) do |f| %>
  <%=f.label :name %>
@@ -13,7 +17,8 @@
 
  <%=f.label :content %>
  <%=f.text_area :content %>
-
  <%=f.submit "Post"%>
 
 <% end %>
+
+</div>
