--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,3 +1,4 @@
+<div class="Boxc">
 <div class="row">
   <div class="col-sm-9">
     <%=render :template=>"selected_companies/new" %>
@@ -14,4 +15,5 @@
       <%=render 'search_result' %>
     </div>
   </div>
+</div>
 </div>
