--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,8 +1,8 @@
+<%=render 'header' %>
 <div class="Boxc">
 <div class="row">
   <div class="col-sm-9">
     <%=render :template=>"selected_companies/new" %>
-    <%= high_chart("sample", @graph) %>
   </div>
 
   <div class="col-sm-3">
