--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,27 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/** CSS：記述スペース */
-
 .starter-template {
     padding: 40px 15px;
     text-align: center;
@@ -29,23 +5,19 @@
 
 
 .boxA {
-    width:70%;
-    height:800px;
+    width:420px;
     border-style:solid;
     border-width:1px;
     border-color:hsla(290,100%,50%,.5);
     border-radius:10px;
     margin:0 auto;
     background-color:hsla(280,100%,90%,.1);
-    margin-top:10px;
 }
 
-
 .title {
-    width:90%;
-    font-size:30px;
+    font-size:20px;
     margin:10px;
-    margin:0 auto;
+    display:inline-block;
     padding:10px;
     border-style:solid;
     border-width:1px;
@@ -144,15 +116,22 @@ input:foucus {
     box-shadow:0px 0px 2px 2px hsla(290,100%,50%,.5);
 }
 
+/***à»â∫ç°âÒèëÇ´â¡Ç¶ÇΩÅiïœÇ¶ÇΩÅjÇ∆Ç±ÇÎ**/
+
+
+/*äOògÇè¡Ç∑ÇΩÇﬂÇ…ÉRÉÅÉìÉgÉAÉEÉgÇµÇƒÇ‹Ç∑*/
 .opcome {
     margin:12px;
     display:inline-block;
     padding:10px;
-    border-style:solid;
-    border-width:1px;
-    border-color:hsla(290,100%,50%,.5);
+/*     border-style:solid;
+border-width:1px;
+border-color:hsla(290,100%,50%,.5); */
     border-radius:10px;
     overflow:hidden;
+    position:relative;
+    background-color:hsla(290,100%,70%,.3);
+
 }
 
 .mycome{
@@ -160,10 +139,63 @@ input:foucus {
     margin-right:px;
     display:inline-block;
     padding:10px;
-    border-style:solid;
-    border-width:1px;
-    border-color:hsla(290,100%,50%,.5);
+/*     border-style:solid;
+border-width:1px;
+border-color:hsla(290,100%,50%,.5); */
     border-radius:10px;
     float:right;
-
+    background-color:hsla(290,100%,70%,.3);
 }
+
+
+
+/**êÅÇ´èoÇµã@î\**/
+
+.ophukidasi{
+    display:inline-block;
+    content:"";
+    position:relative;
+    top:-25px;
+    left:16px;
+    border-style:solid;
+    border-width: 9px 9px 10px 0px;
+    border-color:transparent hsla(290,100%,70%,.3) transparent transparent;
+    z-index:2;
+}
+
+.myhukidasi{
+    display:inline-block;
+    content:"";
+    position:relative;
+    top:20px;
+    left:351px;
+    border-style:solid;;
+    border-width: 9px 0px 10px 9px;
+    border-color:transparent transparent transparent hsla(290,100%,70%,.3);
+}
+
+/*ÉRÉÅÉìÉgÇÃâÒÇËçûÇ›ñhé~*/
+.comewaku:after {
+    content: "";
+    display:block;
+    clear:both;
+}
+
+
+/**inputÇÃïîï™ÇÃéËíºÇµ**/
+.text {
+    border-width: 1px;
+    border-radius: 2px;
+    border-color:hsla(290,100%,80%,.5);
+    box-shadow:inset 0px 4px 8px -4px hsla(290,100%,60%,.4);
+    margin-left:3px;
+}
+.text:focus {
+  box-shadow:0px 0px 1px 2px hsla(290,100%,80%,.7);
+}
+
+
+/*
+boxAÇÃàÍçsñ⁄
+â°ïùÇÇSÇQÇOÇêÇòÇ…å≈íËÇµÇ‹ÇµÇΩ
+*/
