--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 </br>
 
-<%=form_for([@topic,@topic.posts.build],remote:true) do |f| %>
+<%=form_for([@topic,@topic.posts.build]) do |f| %>
  <%=f.label :name %>
  <%=f.text_field :name,class:"form-control" %>
 
